--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/style/main.css" />
   </head>
   <body>
     <main id="app"></main>
-    <script src="/src/main.js" type="module"></script>
+    <script src="/src/index.js" type="module"></script>
   </body>
 </html>
