--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css"
       rel="stylesheet"
     />
-  <link href="./index.css" rel="stylesheet"></head>
+  <script defer src="./index__bundle.js"></script><link href="./index.css" rel="stylesheet"></head>
   <body>
     <main id="app"></main>
-  <script defer src="./index__bundle.js"></script></body>
+  </body>
 </html>
