--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css"
       rel="stylesheet"
     />
-  <script defer src="/index__bundle.js"></script><link href="/index.css" rel="stylesheet"></head>
+  <script defer src="./index__bundle.js"></script><link href="./index.css" rel="stylesheet"></head>
   <body>
     <main id="app"></main>
   </body>
