--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-  <script defer src="/index__bundle.js"></script><link href="/index.css" rel="stylesheet"></head>
+  <script defer src="./index__bundle.js"></script><link href="./index.css" rel="stylesheet"></head>
   <body>
     <main id="app"></main>
   </body>
